--- a/source/assets/css/_navigation.scss
+++ b/source/assets/css/_navigation.scss
@@ -14,7 +14,7 @@
     }
     .navbar-brand {
         margin-left: -15px;
-        padding-top: 13px;
+        padding-top: 7px;
         font-size: 24px;
         font-weight: 600px;
     }
@@ -27,7 +27,6 @@
     }
     a.open-overlay {
         display: inline-block;
-        padding-top: 5px;
         font-size: 26px;
     }
     &.solid {
@@ -57,6 +56,8 @@
 
     li {
         padding-bottom: 8px;
+        position: relative;
+        display: block;
     }
     li a {
         width: 8px;
@@ -64,6 +65,9 @@
         border-radius: 50px;
         background-color: #000;
         padding: 0px!important;
+
+        position: relative;
+        display: block;
 
         &:focus, &:hover {
             background-color: #000!important;
@@ -99,7 +103,7 @@
     a.close-overlay {
         display: inline-block;
         padding-top: 10px;
-        padding-right: 4px;
+        padding-right: 16px;
         font-size: 26px;
     }
     a .fa {
