Change wordpress reflections styles

--- a/source/assets/css/_custom.scss
+++ b/source/assets/css/_custom.scss
@@ -108,10 +108,10 @@
         }
 
         &>.media-body {
-            padding: 6px 4px 0px 4px;
+            padding: 18px 12px 6px 12px;
 
             &> h4 {
-                font-weight: bold;
+                font-size: 18px;
             }
             &>p {
                 line-height: 1;
